crates/ty_python_semantic/resources/mdtest/snapshots/paramspec.md_-_PEP_695_`ParamSpec`_-_Validating_`ParamSpe…_(327594c6dacd8ad).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: paramspec.md - PEP 695 `ParamSpec` - Validating `ParamSpec` usage
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/pep695/paramspec.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Any, Final, ParamSpec, Callable, Concatenate
 2 | 
 3 | def valid[**P](
 4 |     a1: Callable[P, int],
 5 |     a2: Callable[Concatenate[int, P], int],
 6 |     a3: Callable["P", int],
 7 |     a4: Callable[Concatenate[int, "P"], int],
 8 | ) -> None: ...
 9 | def invalid[**P](
10 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
11 |     a1: P,
12 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
13 |     a2: list[P],
14 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
15 |     a3: Callable[[P], int],
16 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
17 |     a4: Callable[..., P],
18 |     # TODO: error
19 |     a5: Callable[Concatenate[P, ...], int],
20 | ) -> None: ...
21 | 
22 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
23 | def invalid_return[**P]() -> P:
24 |     raise NotImplementedError
25 | 
26 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
27 | type Alias[**P] = P
28 | 
29 | def invalid_variable_annotation[**P](y: Any) -> None:
30 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
31 |     x: P = y
32 | 
33 | def invalid_with_qualifier[**P](y: Any) -> None:
34 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
35 |     x: Final[P] = y
36 | 
37 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
38 | def invalid_stringified_return[**P]() -> "P":
39 |     raise NotImplementedError
40 | 
41 | def invalid_stringified_annotation[**P](
42 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
43 |     a: "P",
44 | ) -> None: ...
45 | def invalid_stringified_variable_annotation[**P](y: Any) -> None:
46 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
47 |     x: "P" = y
```

# Diagnostics

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:11:9
   |
 9 | def invalid[**P](
10 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
11 |     a1: P,
   |         ^
12 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
13 |     a2: list[P],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:13:14
   |
11 |     a1: P,
12 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
13 |     a2: list[P],
   |              ^
14 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
15 |     a3: Callable[[P], int],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:15:19
   |
13 |     a2: list[P],
14 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
15 |     a3: Callable[[P], int],
   |                   ^
16 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
17 |     a4: Callable[..., P],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:17:23
   |
15 |     a3: Callable[[P], int],
16 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
17 |     a4: Callable[..., P],
   |                       ^
18 |     # TODO: error
19 |     a5: Callable[Concatenate[P, ...], int],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:23:30
   |
22 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
23 | def invalid_return[**P]() -> P:
   |                              ^
24 |     raise NotImplementedError
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:27:19
   |
26 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
27 | type Alias[**P] = P
   |                   ^
28 |
29 | def invalid_variable_annotation[**P](y: Any) -> None:
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:31:8
   |
29 | def invalid_variable_annotation[**P](y: Any) -> None:
30 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
31 |     x: P = y
   |        ^
32 |
33 | def invalid_with_qualifier[**P](y: Any) -> None:
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:35:8
   |
33 | def invalid_with_qualifier[**P](y: Any) -> None:
34 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
35 |     x: Final[P] = y
   |        ^^^^^^^^
36 |
37 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:38:42
   |
37 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
38 | def invalid_stringified_return[**P]() -> "P":
   |                                          ^^^
39 |     raise NotImplementedError
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:43:8
   |
41 | def invalid_stringified_annotation[**P](
42 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
43 |     a: "P",
   |        ^^^
44 | ) -> None: ...
45 | def invalid_stringified_variable_annotation[**P](y: Any) -> None:
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:47:8
   |
45 | def invalid_stringified_variable_annotation[**P](y: Any) -> None:
46 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
47 |     x: "P" = y
   |        ^^^
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```
